assets/css/_api.styl
.api
  padding small-padding-block
  padding-top xl-padding-block - 7
  +below(small-snap)
    padding (med-padding-block - 7) 4% small-padding-block 4%
  h1, h2, h3, p
    color white
  h3
    margin (large-padding-block - 10) 0 (small-padding-block * -0.5) 0
    +below(small-snap)
      margin-top small-padding-block - 10
  em code
    color green
    font-size small-font
  code
    color orange
  p
    padding (small-padding-block / 2) 0
.view-example
  margin-top small-padding-block - 5
  display inline-block
  &:hover
    color #444
.touch .view-example
  display none
.pushy
  pos(fixed, 0, false, false, false)
  size(30%, 100%)
  z-index 9999
  background #444
  box-shadow inset -10px 0 6px -9px rgba(0, 0, 0, .7)
  overflow auto
  -webkit-overflow-scrolling touch
.pushy-left
  transform translate3d(-100%,0,0)
.touch .pushy-left
  transition none
  transform none
  width 100%
  position static
.pushy-open
  transform translate3d(0,0,0)
.pushy, .push
  transition transform .2s quick-slide-animation
  -webkit-perspective 1000
#demo-container
  width 100%
  overflow hidden
  transition width .2s quick-slide-animation, margin-left .2s quick-slide-animation
  &.container-push
    width 70%
    margin-left 30%
  > *
    transition opacity .2s drawn-out-animation, background .2s drawn-out-animation
  > div
    position relative
    overflow hidden
.faded
  opacity 0.2
.focused-example
  height auto !important
  opacity 1
  overflow hidden
  padding small-padding-block 0
  border 2px solid orange
  box-sizing border-box
  box-shadow inset 0 (xs-padding-block * 2) 0 orange
  &:before
    pos(absolute, 0, false, false, 0)
    size(101%, 100%)
    box-sizing border-box
    content 'column(1/3)'
    font-family code-font
    font-size med-font
    text-align center
    line-height 23px
    color white
.focused-parent *
  transition background .2s drawn-out-animation
.close-api
  size(0, (large-padding-block - 4))
  pos(fixed, xl-padding-block - 16, false, false, 0)
  background-image url('../img/white-x.svg')
  background-color #444
  background-repeat no-repeat
  background-position (med-padding-block + 4) center
  background-size 14px 15px
  content ''
  cursor pointer
  z-index 12
  transition left .2s quick-slide-animation, background-color .5s drawn-out-animation
  &:hover
    background-color orange
.pushy-active
  .close-api
    width xl-padding-block - 2
    left 30%
  .side-nav-link.toggle-api
    visibility hidden

